--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
     "cores": "^0.8.5",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.9.2",
+    "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
+    "sequelize": "^6.37.1",
+    "sequelize-auto": "^0.8.8",
+    "sequelize-cli": "^6.6.2",
     "sql": "^0.78.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ws": "^8.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
