--- a/package.json
+++ b/package.json
@@ -9,19 +9,26 @@
     "axios": "^1.6.7",
     "cores": "^0.8.5",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
+    "nodemin": "^1.0.1",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
+    "redis": "^4.6.13",
     "sequelize": "^6.37.1",
     "sequelize-auto": "^0.8.8",
     "sequelize-cli": "^6.6.2",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
     "sql": "^0.78.0",
     "web-vitals": "^2.1.4",
     "ws": "^8.16.0"
