2024-03-04 jwt /login라우터 정상적으로 토큰 발행 및 redis에 저장 확인, 로그아웃시 삭제와 로그인 세션?유지 필요 / redis를 이용한 로그인 방식 조금 더 공부해봐야할듯..

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "connect-redis": "^7.1.1",
     "cores": "^0.8.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -19,11 +20,13 @@
     "nodemin": "^1.0.1",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
     "redis": "^4.6.13",
+    "redis-client": "^0.3.5",
     "sequelize": "^6.37.1",
     "sequelize-auto": "^0.8.8",
     "sequelize-cli": "^6.6.2",
