--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "mysql2": "^3.9.2",
     "nodemin": "^1.0.1",
     "nodemon": "^3.1.0",
+    "postcss-nested": "^6.0.1",
     "react": "^18.2.0",
     "react-cookie": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.1",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "recoil": "^0.7.7",
     "redis": "^4.6.13",
     "redis-client": "^0.3.5",
     "sequelize": "^6.37.1",
@@ -61,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.17",
     "json-server": "^1.0.0-alpha.23",
     "postcss": "^8.4.35",
