--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-icons": "^5.0.1",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.0",
     "recoil": "^0.7.7",
     "redis": "^4.6.13",
     "redis-client": "^0.3.5",
@@ -36,6 +36,8 @@
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
     "sql": "^0.78.0",
+    "styled-components": "^6.1.8",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4",
     "ws": "^8.16.0"
   },
