--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "connect-redis": "^7.1.1",
     "cores": "^0.8.5",
     "cors": "^2.8.5",
@@ -37,6 +38,7 @@
     "socket.io-client": "^4.7.4",
     "sql": "^0.78.0",
     "styled-components": "^6.1.8",
+    "typescript": "^5.4.2",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4",
     "ws": "^8.16.0"
